<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.UserDetailActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_picture_desc"/>

    <TextView
        android:id="@+id/idTVname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/idTVlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/location"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/idTVname"
        app:layout_constraintStart_toStartOf="@+id/idTVname"
        app:layout_constraintTop_toBottomOf="@+id/idTVcompany" />

    <TextView
        android:id="@+id/idTVcompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/company"
        android:textSize="16sp"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="@+id/idTVname"

        app:layout_constraintStart_toStartOf="@+id/idTVname"
        app:layout_constraintTop_toBottomOf="@+id/idTVusername" />

    <TextView
        android:id="@+id/idTVusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username_text"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/idTVname"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/idTVname"
        app:layout_constraintTop_toBottomOf="@+id/idTVname" />

    <TextView
        android:id="@+id/idTVfollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/followers_text"
        app:layout_constraintEnd_toEndOf="@+id/idTVname"
        app:layout_constraintStart_toStartOf="@+id/idTVname"
        app:layout_constraintTop_toBottomOf="@+id/idTVfollowernum" />

    <TextView
        android:id="@+id/idTVfollowernum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/followers_text"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="@+id/idTVname"
        app:layout_constraintStart_toStartOf="@+id/idTVname"
        app:layout_constraintTop_toBottomOf="@+id/idTVlocation" />

    <TextView
        android:id="@+id/idTVreponum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository_text"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/idTVfollowernum" />

    <TextView
        android:id="@+id/idTVrepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repository_text"
        app:layout_constraintBottom_toBottomOf="@+id/idTVfollower"
        app:layout_constraintEnd_toEndOf="@+id/idTVreponum"
        app:layout_constraintStart_toStartOf="@+id/idTVreponum"
        app:layout_constraintTop_toBottomOf="@+id/idTVreponum"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="600dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/favorite_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFF00"
        app:backgroundTint="@color/black"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonRemoveFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="600dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/baseline_heart_broken_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonFavorite"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFF00"
        app:backgroundTint="@color/black"
        />
    <TextView
        android:id="@+id/idTVfollowingnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following_text"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idTVfollowernum" />

    <TextView
        android:id="@+id/idTVfollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/following_text"
        app:layout_constraintBottom_toBottomOf="@+id/idTVfollower"
        app:layout_constraintEnd_toEndOf="@+id/idTVfollowingnum"
        app:layout_constraintStart_toStartOf="@+id/idTVfollowingnum"
        app:layout_constraintTop_toBottomOf="@+id/idTVfollowingnum"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>